--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && mv build docs",
-    "deploy": "npm run build && gh-pages -d dist"
+    "build": "react-scripts build && rm -rf docs && mv build docs"
   },
   "eslintConfig": {
     "extends": [
